[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GUI/InventorySlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Items/#1 - Transparent Icons.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LootGUI.gd" type="Script" id=3]
[ext_resource path="res://Sprites/ThemeUI/theme.tres" type="Theme" id=4]

[node name="LootGUI" type="Node2D"]
z_index = 4
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 146.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 139.0
margin_bottom = 175.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer2"]
margin_right = 132.0
margin_bottom = 32.0

[node name="TextEdit" type="Label" parent="PanelContainer/VBoxContainer2/HBoxContainer2"]
margin_top = 2.0
margin_right = 40.0
margin_bottom = 30.0
size_flags_horizontal = 7
text = "0"
align = 2

[node name="Container" type="MarginContainer" parent="PanelContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 32.0
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 10
custom_constants/margin_bottom = 8

[node name="Sprite" type="Sprite" parent="PanelContainer/VBoxContainer2/HBoxContainer2/Container"]
position = Vector2( 10, 16 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
hframes = 16
vframes = 22
frame = 203

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Take"

[node name="HBoxContainer" type="GridContainer" parent="PanelContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 132.0
margin_bottom = 168.0
columns = 2

[node name="InventorySlot" parent="PanelContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
can_drop_item = false

[node name="InventorySlot2" parent="PanelContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_right = 132.0
can_drop_item = false

[node name="InventorySlot3" parent="PanelContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 68.0
margin_bottom = 132.0
can_drop_item = false

[node name="InventorySlot4" parent="PanelContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
can_drop_item = false

[connection signal="pressed" from="PanelContainer/VBoxContainer2/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
